fix alignment a little bit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,6 @@ footer {
   background-color: whitesmoke;
   margin: 2% 0px 20% 0px;
   border: 1px solid #b6b8ac;
-  margin-top: 2%;
 }
 
 p {
